Replaced deprecated new Integer(), Double(), Float() by .valueOf()
A bit of housekeeping and a test for my first "push" to this branch

Signed-off-by: Martin Bluemel <martin.bluemel1@vodafone.com>